# dissertationapp

./: .gitignore  README.md
ip-spoof/: Cargo.toml
ip-spoof/src/: lib.rs
market/: Cargo.toml  DEMO_SETUP.md  README.md  clippy.toml  join-tailnet.sh  run-demo-instance.sh  run-public.sh
market/.cargo/: config.toml
market/.config/: nextest.toml
market/.github/workflows/: ci.yml
market/assets/: lattice.js  styles.css
market/scripts/: run-integration-tests.sh  setup-e2e-fast.sh  setup-e2e.sh
market/scripts/bench/: plot_results.py  run_mpc_direct.sh  run_veilid_bench.sh
market/src/: actions.rs  config.rs  demo.rs  error.rs  lib.rs  main.rs  shared_state.rs  util.rs
market/src/app/: actions.rs  components.rs  mod.rs  state.rs
market/src/crypto/: content.rs  mod.rs
market/src/marketplace/: bid.rs  bid_record.rs  listing.rs  mod.rs
market/src/mocks/: dht.rs  mod.rs  process.rs  random.rs  time.rs  transport.rs
market/src/mpc/: client.rs  mod.rs
market/src/traits/: dht.rs  mod.rs  process.rs  random.rs  time.rs  transport.rs
market/src/veilid/: auction_coordinator.rs  auction_logic.rs  bid_announcement.rs  bid_ops.rs  bid_storage.rs  bidder_registry.rs  dht.rs  listing_ops.rs  mod.rs  mpc.rs  mpc_execution.rs  mpc_orchestrator.rs  mpc_routes.rs  mpc_verification.rs  node.rs  registry.rs  registry_types.rs
market/src/veilid/auction_coordinator/: broadcast.rs  handlers.rs  mod.rs  monitor.rs  signing.rs
market/src/veilid/mpc/: incoming.rs  mod.rs  outgoing.rs
market/tests/: auction_flow.rs  dht_integration.rs  hpke_spike.rs  integration_tests.rs  mpc_integration.rs
market/tests/common/: harness.rs  mod.rs
market/tests/e2e/: edge_cases.rs  helpers.rs  mod.rs  smoke.rs
market/tests/integration/: auction_10_party.rs  auction_3_party.rs  auction_5_party.rs  auction_nparty.rs  edge_cases.rs  error_cases.rs  mod.rs  security.rs
mpc-program/: auction.mpc
