[package]
name = "market"
version = "0.1.0"
edition = "2021"
description = "Decentralized P2P SMPC Sealed-Bid Auction Marketplace"
authors = ["Anker Rasmussen"]
default-run = "market"

[[bin]]
name = "market"
path = "src/main.rs"

[[bin]]
name = "devnet-ctl"
path = "src/bin/devnet-ctl.rs"

[features]
default = []
test = []

[dependencies]
# UI Framework
dioxus = { version = "0.7.2", features = ["desktop"] }

# Veilid P2P Network
# footgun feature enables unsafe routing for devnet (no privacy routes)
veilid-core = { path = "../../veilid/veilid-core", default-features = false, features = ["default-tokio", "footgun"] }

# Async Runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "io-util", "net"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"  # CBOR serialization for DHT records
bincode = "1.3"  # Binary serialization for MPC messages

# Error handling
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
sha2 = "0.10"  # SHA256 hashing for content verification
ed25519-dalek = { version = "2", default-features = false }  # Shared keypair derivation
aes-gcm = "0.10"  # AES-256-GCM encryption for content
rand = "0.8"  # Random number generation

# Utilities
parking_lot = "0.12"
dirs = "6.0"
libc = "0.2"
hex = "0.4"
data-encoding = "2.6"

[dev-dependencies]
market = { path = ".", features = ["test"] }
serial_test = "3.0"  # Run E2E tests sequentially
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
