[package]
name = "market"
version = "0.1.0"
edition = "2021"
description = "Decentralized P2P SMPC Sealed-Bid Auction Marketplace"
authors = ["Anker Rasmussen"]
default-run = "market"

[[bin]]
name = "market"
path = "src/main.rs"

[[bin]]
name = "devnet-ctl"
path = "src/bin/devnet-ctl.rs"

[features]
default = []
test = []

[dependencies]
# UI Framework
dioxus = { version = "0.7.2", features = ["desktop"] }

# Veilid P2P Network
veilid-core = { path = "../../veilid/veilid-core", default-features = false, features = ["default-tokio"] }

# Async Runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "io-util", "net"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"  # CBOR serialization for DHT records
bincode = "1.3"  # Binary serialization for MPC messages

# Error handling
thiserror = "2"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
sha2 = "0.10"  # SHA256 hashing for content verification
subtle = "2"  # Constant-time comparison for commitment verification
ed25519-dalek = { version = "2", default-features = false }  # Shared keypair derivation
aes-gcm = "0.10"  # AES-256-GCM encryption for content
blake3 = "1"  # BLAKE3 hashing for deterministic DHT key derivation
rand = "0.8"  # Random number generation

# Cancellation
tokio-util = { version = "0.7", features = ["rt"] }

# Utilities
parking_lot = "0.12"
dirs = "6.0"
hex = "0.4"
data-encoding = "2.6"

[dev-dependencies]
market = { path = ".", features = ["test"] }
serial_test = "3.0"  # Run E2E tests sequentially
